WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50599
Simplified some ASLR-related code in PageAllocation/Reservation
https://bugs.webkit.org/show_bug.cgi?id=50599
Summary
Simplified some ASLR-related code in PageAllocation/Reservation
Geoffrey Garen
Reported
2010-12-06 16:42:57 PST
Simplified some ASLR-related code in PageAllocation/Reservation
Attachments
Patch
(9.44 KB, patch)
2010-12-06 16:43 PST
,
Geoffrey Garen
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2010-12-06 16:43:26 PST
Created
attachment 75750
[details]
Patch
WebKit Review Bot
Comment 2
2010-12-06 16:48:19 PST
Attachment 75750
[details]
did not pass style-queue: Failed to run "[u'git', u'reset', u'--hard', u'HEAD']" exit_code: 128 error: Could not write new index file. fatal: Could not reset index file to revision 'HEAD'. If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3
2010-12-06 17:01:28 PST
Committed
r73417
: <
http://trac.webkit.org/changeset/73417
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug